--- a/requirements.txt
+++ b/requirements.txt
@@ -4,23 +4,23 @@ pyyaml==6.0.1
 pydantic==2.5.0
 
 # LLM Integration
-openai==1.3.0
-anthropic==0.7.0
-langchain==0.1.0
-langchain-openai==0.0.2
+openai>=1.6.1
+anthropic>=0.7.0
+langchain>=0.1.0
+langchain-openai>=0.0.2
 
 # Agent Frameworks
-autogen==0.2.0
+autogen
 
 # System Operations
-psutil==5.9.6
-pyautogui==0.9.54
-pygetwindow==0.0.9
+psutil
+pyautogui
+pygetwindow
 
 # Web Scraping
-beautifulsoup4==4.12.2
-scrapy==2.11.0
-playwright==1.40.0
+beautifulsoup4
+scrapy
+playwright
 requests==2.31.0
 
 # Vector Database & Embeddings
